--- a/My_Restaurant/about_us/templates/about_us.html
+++ b/My_Restaurant/about_us/templates/about_us.html
@@ -14,8 +14,7 @@
         </div>
         <div class="col-md-6">
             <h2 class="about_title">Hello I am Shakil Ahmmed</h2>
-            <p class="about_details"> I am a Web designer and Digital Marketer.
-                Through Website Clone, web design, LinkedIn Profile Optimize, B2B lead generation, on-page SEO, Website SEO Audit report, and more, I've helped organizations and people expand their online presence. Yes, I am fascinated by technology and future developments.</p>
+            <p class="about_details"> Shakil is a culinary connoisseur driven by a passion for creating unforgettable dining experiences. With a background in [mention relevant experience], [he/she] founded [Restaurant Name] to share [his/her] love for [specific cuisine or concept] with the world. Committed to excellence in every detail, I am invites guests to indulge in a journey of flavors and hospitality unlike any other.</p>
             <a class="icone" href=""><i class="fa-brands fa-facebook"></i></a>
             <a class="icone" href=""><i class="fa-brands fa-linkedin"></i></i></a>
             <a class="icone" href=""><i class="fa-brands fa-instagram"></i></i></a>
