--- a/My_Restaurant/templates/home.html
+++ b/My_Restaurant/templates/home.html
@@ -11,8 +11,8 @@
 <div class="container">
     <div class="row mt-5 justify-content-center align-items-center home_css">
         <div class="col-md-6 div-class">
-            <h2>Welcom To <br> <span class="">The Restaurant</span></h2>
-            <p>At The Restaurant, we believe that good food brings people together, and we're honored to be a part of your memorable moments. Welcome, and let the culinary journey begin.</p>
+            <h2>Welcom To <br> <span class="">SpiceScape Eatery</span></h2>
+            <p>At SpiceScape Eatery Restaurant, we believe that good food brings people together, and we're honored to be a part of your memorable moments. Welcome, and let the culinary journey begin.</p>
             <button class="btn btn-primary">Buy Now</button>
         </div>
         <div class="col-md-6 burger">
