--- a/My_Restaurant/templates/base.html
+++ b/My_Restaurant/templates/base.html
@@ -36,7 +36,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">My Restaurant</a>
+          <a class="navbar-brand" href="#">SpiceScape Eatery</a>
           <button
             class="navbar-toggler"
             type="button"
