--- a/module14_5_practice_1/first_app/templates/home.html
+++ b/module14_5_practice_1/first_app/templates/home.html
@@ -1,16 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
-<body>
-    <h1>Home pages</h1>
+{% extends 'base.html' %}
 
-    <!-- Script file add -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-</body>
-</html>
+{% block content %}
+<h1> Home page</h1>
+{% if data %}
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th scope="col">Roll</th>
+          <th scope="col">Student Name</th>
+          <th scope="col">Age</th>
+          <th scope="col">Address</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for st in data %}
+        <tr>
+          <td>{{st.roll}}</td>
+          <td>{{st.name}}</td>
+          <td>{{st.age}}</td>
+          <td>{{st.address}}</td>
+        </tr>
+        {%endfor%}
+      </tbody>
+    </table>
+    {% else %}
+    <h3>No data available to show</h3>
+    {% endif%}
+
+{% endblock %}
