--- a/Car_sales/author/templates/edit_profile.html
+++ b/Car_sales/author/templates/edit_profile.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_tags %}
 <h1>Welcom to Profile</h1>
 <form method="post" style="width: 50%; height: 500px; margin: auto;" class="pt-5">
-    <h1>Sig Up Form</h1>
+    <h1>Chang Your Profile info</h1>
     {% csrf_token %}
     {{form | crispy}}
     <button class="btn btn-primary">Submit</button>
