--- a/Car_sales/author/templates/profile.html
+++ b/Car_sales/author/templates/profile.html
@@ -3,10 +3,8 @@
 {% block content %}
 {% load crispy_forms_tags %}
 <h1>Welcom to Profile</h1>
-<!-- <form method="post" style="width: 50%; height: 500px; margin: auto;" class="pt-5">
-    <h1>Sig Up Form</h1>
-    {% csrf_token %}
-    {{form | crispy}}
-    <button class="btn btn-primary">Submit</button>
-</form> -->
+<div>
+    <a class="btn btn-warning " href="{% url 'edit_profile' %}">Edit Profile</a>
+
+</div>
 {% endblock %}
