--- a/Car_sales/templates/base.html
+++ b/Car_sales/templates/base.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+    <nav class=" navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid  container">
           <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,12 +22,36 @@
         
             </ul>
             <div class="d-flex" role="search">
-              <a href="{% url 'signup' %}" class="btn btn-outline-success">Sign Up</a>
-              <a href="{% url 'login' %}" class="btn btn-outline-success">Login</a>
+              <ul class="navbar-nav me-auto mb- mb-lg-0">
+                {% if request.user.is_authenticated %}
+                <li class="nav-item mx-2">
+                 <a class="btn btn-warning  nav-link " href="{% url 'profile' %}">Profile</a>
+               </li>
+                <li class="nav-item mx-2">
+                 <a class="btn btn-warning  nav-link " href="{% url 'user_logout' %}">Log Out</a>
+               </li>
+                {% else %}
+                  
+                   <li class="nav-item mx-2">
+                     <a class="btn btn-warning  nav-link " href="{% url 'signup' %}">Sign Up</a>
+                   </li>
+                   <li class="nav-item">
+                     <a class="nav-link btn btn-success" href="{% url 'login' %}">Login</a>
+                   </li>
+                 
+                {% endif %} 
+               </ul>
             </div>
           </div>
         </div>
       </nav>
+
+
+      {% for i in messages %}
+      <div class="">
+        <h3 class="text-{{i.tags}}">{{i}}</h3>
+      </div>
+      {% endfor %}
 
       {% block content %}
 
