--- a/Car_sales/templates/home.html
+++ b/Car_sales/templates/home.html
@@ -1,5 +1,55 @@
 {% extends 'base.html' %}
 
+{%load static %}
 {% block content  %}
-<h1>Home Page</h1>
+<div class="container">
+    <div class="row d-flex flex-wrap justify-content-center align-items-center">
+        <div class="col-md-5">
+            <h1>WelCome To <br> Care SALE</h1>
+        </div>
+        <div class="col-md-5">
+           <img src="{% static 'home.png' %}" alt="">
+        </div>
+    </div>
+</div>
+
+<!-- thi is the car post -->
+<!-- <div class="col-10 p-2">
+    <h4>{{data | length}} result found</h4>
+       
+    {% for dt in data %}
+    <h1>{{ dt.title }}</h1>
+    <h1>{{ dt.price }}</h1>
+    <img src="{{ dt.image.url }}" alt="">
+{% endfor %}
+  </div>
+</div> -->
+
+<div class="col-10 p-2">
+  <h4>{{data | length}} result found</h4>
+  <div class="d-flex flex-wrap px-5">
+    {% for post in data%}
+    <div class="col-sm-3 mb-3 mb-sm-0">
+      <div class="card mx-2 my-2">
+        <div class="card-body">
+          <img src="{{post.image.url}}" class="card-img-top" alt="picture">
+          <h5 class="card-title"><a class="text-decoration-none text-dark">{{post.title}}</a></h5>
+          <p class="card-text">{{post.content | truncatewords:10}}</p>
+
+          <p>
+            Brand: 
+            <button class="btn btn-primary btn-sm disabled m-1">
+              {{post.category}}
+            </button>
+  
+          </p>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+</div>
+</div>
+
+
 {% endblock %}
