--- a/Car_sales/categories/templates/add_category.html
+++ b/Car_sales/categories/templates/add_category.html
@@ -1,11 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% load crispy_forms_tags %}
-<form method="post" style="width: 50%; height: 500px; margin: auto;" class="pt-5">
-    <h1>Add Category Form</h1>
-    {% csrf_token %}
-    {{form | crispy}}
-    <button class="btn btn-primary">Submit</button>
-</form>
+
+{% for dt in data}
+
 {% endblock %}
